--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "flutter",
-    "displayName": "Ultimate Flutter Extension Pack",
+    "name": "du-flutter-ultimate-package",
+    "displayName": "DU Ultimate Flutter Extension Pack",
     "description": "The Ultimate pack which includes every extension you will ever need for Flutter development",
-    "version": "0.0.5",
+    "version": "1.0.3",
     "engines": {
         "vscode": "^1.46.0"
     },
@@ -10,29 +10,29 @@
         "Extension Packs"
     ],
     "icon": "images/dartXflutter.png",
-    "publisher": "MarufHassan",
+    "publisher": "betrider",
     "extensionPack": [
+        "ms-ceintl.vscode-language-pack-ko",
         "felixangelov.bloc",
         "dart-code.dart-code",
         "dart-code.flutter",
         "circlecodesolution.ccs-flutter-color",
         "jeroen-meijer.pubspec-assist",
-        "everettjf.pubspec-dependency-search",
         "aaron-bond.better-comments",
         "coenraads.bracket-pair-colorizer",
-        "usernamehw.errorlens",
         "pkief.material-icon-theme",
-        "moyu.snapcode",
         "gruntfuggly.todo-tree",
         "visualstudioexptteam.vscodeintellicode",
-        "hnw.vscode-auto-open-markdown-preview",
+        "yzhang.markdown-all-in-one",
         "mhutchie.git-graph",
         "donjayamanne.githistory",
         "eamodio.gitlens",
         "miquelddg.dart-barrel-file-generator",
-        "humao.rest-client",
-        "arcsine.chronicler",
-        "MarufHassan.flutter-snippets"
+        "edgardmessias.clipboard-manager",
+        "normanstypczynskipublisher.gqlformatter",
+        "kisstkondoros.vscode-gutter-preview",
+        "streetsidesoftware.code-spell-checker",
+        "betrider.du-dart-class-generator"
     ],
     "repository": {
         "type": "git",
