--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
         "streetsidesoftware.code-spell-checker",
         "stxr.iconfont-preview",
         "robert-brunhage.flutter-riverpod-snippets",
+        "kimseungtae.aicodehelper",
+        "simonsiefke.svg-preview",
+        "mathiasfrohlich.kotlin",
+        "kasik96.swift",
         "betrider.du-dart-class-generator"
     ],
     "repository": {
